build/log/idf_py_stdout_output_23108
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\esp32_3c\build\bootloader\esp-idf\esptool_py && d:\Espressif32\python_env\idf5.0_py3.10_env\Scripts\python.exe E:/esp/esp32c3/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 E:/esp32_3c/build/bootloader/bootloader.bin"
Bootloader binary size 0x5580 bytes. 0x2a80 bytes (33%) free.
[2/7] Building C object esp-idf/bluetooth/CMakeFiles/__idf_bluetooth.dir/bluetooth.c.obj
FAILED: esp-idf/bluetooth/CMakeFiles/__idf_bluetooth.dir/bluetooth.c.obj 
ccache D:\Espressif32\tools\xtensa-esp32s3-elf\esp-2022r1-RC1-11.2.0\xtensa-esp32s3-elf\bin\xtensa-esp32s3-elf-gcc.exe  -IE:/esp32_3c/build/config -IE:/esp32_3c/components/bluetooth -IE:/esp/esp32c3/esp-idf/components/newlib/platform_include -IE:/esp/esp32c3/esp-idf/components/freertos/FreeRTOS-Kernel/include -IE:/esp/esp32c3/esp-idf/components/freertos/esp_additions/include/freertos -IE:/esp/esp32c3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IE:/esp/esp32c3/esp-idf/components/freertos/esp_additions/include -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/include -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/include/soc -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/port/esp32s3/. -IE:/esp/esp32c3/esp-idf/components/esp_hw_support/port/esp32s3/private_include -IE:/esp/esp32c3/esp-idf/components/heap/include -IE:/esp/esp32c3/esp-idf/components/log/include -IE:/esp/esp32c3/esp-idf/components/soc/include -IE:/esp/esp32c3/esp-idf/components/soc/esp32s3/. -IE:/esp/esp32c3/esp-idf/components/soc/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/hal/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/hal/include -IE:/esp/esp32c3/esp-idf/components/hal/platform_port/include -IE:/esp/esp32c3/esp-idf/components/esp_rom/include -IE:/esp/esp32c3/esp-idf/components/esp_rom/include/esp32s3 -IE:/esp/esp32c3/esp-idf/components/esp_rom/esp32s3 -IE:/esp/esp32c3/esp-idf/components/esp_common/include -IE:/esp/esp32c3/esp-idf/components/esp_system/include -IE:/esp/esp32c3/esp-idf/components/esp_system/port/soc -IE:/esp/esp32c3/esp-idf/components/esp_system/port/include/private -IE:/esp/esp32c3/esp-idf/components/xtensa/include -IE:/esp/esp32c3/esp-idf/components/xtensa/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/lwip/include -IE:/esp/esp32c3/esp-idf/components/lwip/include/apps -IE:/esp/esp32c3/esp-idf/components/lwip/include/apps/sntp -IE:/esp/esp32c3/esp-idf/components/lwip/lwip/src/include -IE:/esp/esp32c3/esp-idf/components/lwip/port/esp32/include -IE:/esp/esp32c3/esp-idf/components/lwip/port/esp32/include/arch -IE:/esp/esp32c3/esp-idf/components/driver/include -IE:/esp/esp32c3/esp-idf/components/driver/deprecated -IE:/esp/esp32c3/esp-idf/components/driver/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/esp_pm/include -IE:/esp/esp32c3/esp-idf/components/esp_ringbuf/include -IE:/esp/esp32c3/esp-idf/components/nvs_flash/include -IE:/esp/esp32c3/esp-idf/components/spi_flash/include -IE:/esp/esp32c3/esp-idf/components/bt/include/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/bt/common/osi/include -IE:/esp/esp32c3/esp-idf/components/bt/common/api/include/api -IE:/esp/esp32c3/esp-idf/components/bt/common/btc/profile/esp/blufi/include -IE:/esp/esp32c3/esp-idf/components/bt/common/btc/profile/esp/include -IE:/esp/esp32c3/esp-idf/components/bt/host/bluedroid/api/include/api -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/mesh_common/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/mesh_common/tinycrypt/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/mesh_core -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/mesh_core/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/mesh_core/storage -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/btc/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/mesh_models/common/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/mesh_models/client/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/mesh_models/server/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/api/core/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/api/models/include -IE:/esp/esp32c3/esp-idf/components/bt/esp_ble_mesh/api -IE:/esp/esp32c3/esp-idf/components/bt/porting/ext/tinycrypt/include -IE:/esp/esp32c3/esp-idf/components/esp_timer/include -IE:/esp/esp32c3/esp-idf/components/esp_wifi/include -IE:/esp/esp32c3/esp-idf/components/esp_event/include -IE:/esp/esp32c3/esp-idf/components/esp_phy/include -IE:/esp/esp32c3/esp-idf/components/esp_phy/esp32s3/include -IE:/esp/esp32c3/esp-idf/components/esp_netif/include -mlongcalls  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-error=format= -Wno-format -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=E:/esp32_3c=. -fmacro-prefix-map=E:/esp/esp32c3/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dev-4379-g36f49f361c-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/bluetooth/CMakeFiles/__idf_bluetooth.dir/bluetooth.c.obj -MF esp-idf\bluetooth\CMakeFiles\__idf_bluetooth.dir\bluetooth.c.obj.d -o esp-idf/bluetooth/CMakeFiles/__idf_bluetooth.dir/bluetooth.c.obj -c E:/esp32_3c/components/bluetooth/bluetooth.c
E:/esp32_3c/components/bluetooth/bluetooth.c:237: warning: "GATTS_DEMO_CHAR_VAL_LEN_MAX" redefined
  237 | #define GATTS_DEMO_CHAR_VAL_LEN_MAX 0x40
      | 
E:/esp32_3c/components/bluetooth/bluetooth.c:55: note: this is the location of the previous definition
   55 | #define GATTS_DEMO_CHAR_VAL_LEN_MAX 500
      | 
E:/esp32_3c/components/bluetooth/bluetooth.c: In function 'gatts_profile_a_event_handler':
E:/esp32_3c/components/bluetooth/bluetooth.c:306:19: warning: unused variable 'add_char_ret' [-Wunused-variable]
  306 |         esp_err_t add_char_ret = esp_ble_gatts_add_char(gl_profile_tab[PROFILE_APP_IDX].service_handle, &gl_profile_tab[PROFILE_APP_IDX].char_uuid,
      |                   ^~~~~~~~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:316:19: warning: variable 'ret' set but not used [-Wunused-but-set-variable]
  316 |         esp_err_t ret = esp_ble_gap_config_adv_data(&adv_data);
      |                   ^~~
E:/esp32_3c/components/bluetooth/bluetooth.c:315:19: warning: unused variable 'set_dev_name_ret' [-Wunused-variable]
  315 |         esp_err_t set_dev_name_ret = esp_ble_gap_set_device_name(SAMPLE_DEVICE_NAME);
      |                   ^~~~~~~~~~~~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:323:19: warning: unused variable 'add_descr_ret' [-Wunused-variable]
  323 |         esp_err_t add_descr_ret = esp_ble_gatts_add_char_descr(gl_profile_tab[PROFILE_APP_IDX].service_handle, &gl_profile_tab[PROFILE_APP_IDX].descr_uuid,
      |                   ^~~~~~~~~~~~~
E:/esp32_3c/components/bluetooth/bluetooth.c:373:100: error: 'PROFILE_A_APP_ID' undeclared (first use in this function); did you mean 'PROFILE_APP_IDX'?
  373 |                         esp_ble_gatts_send_indicate(gatts_if, param->write.conn_id, gl_profile_tab[PROFILE_A_APP_ID].char_handle,
      |                                                                                                    ^~~~~~~~~~~~~~~~
      |                                                                                                    PROFILE_APP_IDX
E:/esp32_3c/components/bluetooth/bluetooth.c:373:100: note: each undeclared identifier is reported only once for each function it appears in
At top level:
E:/esp32_3c/components/bluetooth/bluetooth.c:135:34: warning: 'heart_rate_profile_tab' defined but not used [-Wunused-variable]
  135 | static struct gatts_profile_inst heart_rate_profile_tab[PROFILE_NUM] = {
      |                                  ^~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
